bug 317674 : renaming folders whose name contains chars. outside the system default codepage doesn't work: r/sr=bienvenu