mailnews/base/util/nsMsgI18N.h
@@ -212,28 +212,4 @@ inline nsresult ConvertFromUnicode(const char* charset,
     return nsMsgI18NConvertFromUnicode(charset, aSrc, aDest);
 }
 
-// XXX to be replaced by NS_CopyNativeToUnicode
-inline nsresult nsMsgI18NCopyNativeToUTF16(const nsAFlatCString &aSrc,
-                                           nsAString &aDest)
-{
-  return nsMsgI18NConvertToUnicode(nsMsgI18NFileSystemCharset(), aSrc, aDest);
-}
-
-inline nsresult nsMsgI18NCopyNativeToUTF16(const char* aSrc, nsAString &aDest)
-{
-  return nsMsgI18NCopyNativeToUTF16(nsDependentCString(aSrc), aDest);
-}
-
-// XXX to be replaced by NS_CopyUnicodeToNative
-inline nsresult nsMsgI18NCopyUTF16ToNative(const nsAFlatString &aSrc,
-                                           nsACString &aDest)
-{
-  return nsMsgI18NConvertFromUnicode(nsMsgI18NFileSystemCharset(), aSrc, aDest);
-}
-inline nsresult nsMsgI18NCopyUTF16ToNative(const PRUnichar* aSrc,
-                                           nsACString &aDest)
-{
-  return nsMsgI18NCopyUTF16ToNative(nsDependentString(aSrc), aDest);
-}
-
 #endif /* _nsMsgI18N_H_ */
